--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=GestionHotelera
 spring.datasource.url=jdbc:mysql://localhost:3306/gestion_hotelera
 spring.datasource.username=root
-spring.datasource.password=Joa2710200143495143
+spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
